@@ -7,11 +7,13 @@
 
 package org.elasticsearch.xpack.autoscaling.storage;
 
+import org.elasticsearch.Version;
 import org.elasticsearch.cluster.ClusterInfo;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.DiskUsage;
 import org.elasticsearch.cluster.metadata.DataStream;
 import org.elasticsearch.cluster.metadata.DataStreamMetadata;
+import org.elasticsearch.cluster.metadata.DesiredNodes;
 import org.elasticsearch.cluster.metadata.IndexAbstraction;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
@@ -33,7 +35,6 @@ import org.elasticsearch.cluster.routing.allocation.decider.FilterAllocationDeci
 import org.elasticsearch.cluster.routing.allocation.decider.SameShardAllocationDecider;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.UUIDs;
-import org.elasticsearch.common.collect.ImmutableOpenMap;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.common.settings.ClusterSettings;
@@ -55,6 +56,7 @@ import org.elasticsearch.xpack.cluster.routing.allocation.DataTierAllocationDeci
 import java.io.IOException;
 import java.math.BigInteger;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
@@ -62,6 +64,8 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.SortedSet;
+import java.util.TreeSet;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -106,19 +110,34 @@ public class ReactiveStorageDeciderService implements AutoscalingDeciderService 
             return new AutoscalingDeciderResult(null, new ReactiveReason("current capacity not available", -1, -1));
         }
 
-        AllocationState allocationState = new AllocationState(context, diskThresholdSettings, allocationDeciders);
-        long unassignedBytes = allocationState.storagePreventsAllocation();
-        long assignedBytes = allocationState.storagePreventsRemainOrMove();
+        AllocationState allocationState = allocationState(context);
+        var assignedBytesUnmovableShards = allocationState.storagePreventsRemainOrMove();
+        long assignedBytes = assignedBytesUnmovableShards.sizeInBytes();
+        var unassignedBytesUnassignedShards = allocationState.storagePreventsAllocation();
+        long unassignedBytes = unassignedBytesUnassignedShards.sizeInBytes();
         long maxShardSize = allocationState.maxShardSize();
         assert assignedBytes >= 0;
         assert unassignedBytes >= 0;
         assert maxShardSize >= 0;
         String message = message(unassignedBytes, assignedBytes);
         AutoscalingCapacity requiredCapacity = AutoscalingCapacity.builder()
-            .total(autoscalingCapacity.total().storage().getBytes() + unassignedBytes + assignedBytes, null)
-            .node(maxShardSize, null)
+            .total(autoscalingCapacity.total().storage().getBytes() + unassignedBytes + assignedBytes, null, null)
+            .node(maxShardSize, null, null)
             .build();
-        return new AutoscalingDeciderResult(requiredCapacity, new ReactiveReason(message, unassignedBytes, assignedBytes));
+        return new AutoscalingDeciderResult(
+            requiredCapacity,
+            new ReactiveReason(
+                message,
+                unassignedBytes,
+                unassignedBytesUnassignedShards.shardIds(),
+                assignedBytes,
+                assignedBytesUnmovableShards.shardIds()
+            )
+        );
+    }
+
+    AllocationState allocationState(AutoscalingDeciderContext context) {
+        return new AllocationState(context, diskThresholdSettings, allocationDeciders);
     }
 
     static String message(long unassignedBytes, long assignedBytes) {
@@ -157,7 +176,7 @@ public class ReactiveStorageDeciderService implements AutoscalingDeciderService 
             .stream()
             .filter(single -> single.type() == Decision.Type.NO)
             .filter(predicate)
-            .collect(Collectors.toList());
+            .toList();
 
         if (nos.size() == 1) {
             return Optional.ofNullable(nos.get(0).label());
@@ -214,16 +233,19 @@ public class ReactiveStorageDeciderService implements AutoscalingDeciderService 
             this.roles = roles;
         }
 
-        public long storagePreventsAllocation() {
+        public ShardsSize storagePreventsAllocation() {
             RoutingAllocation allocation = new RoutingAllocation(allocationDeciders, state, info, shardSizeInfo, System.nanoTime());
-            return StreamSupport.stream(state.getRoutingNodes().unassigned().spliterator(), false)
+            List<ShardRouting> unassignedShards = StreamSupport.stream(state.getRoutingNodes().unassigned().spliterator(), false)
                 .filter(shard -> canAllocate(shard, allocation) == false)
                 .filter(shard -> cannotAllocateDueToStorage(shard, allocation))
-                .mapToLong(this::sizeOf)
-                .sum();
+                .toList();
+            return new ShardsSize(
+                unassignedShards.stream().mapToLong(this::sizeOf).sum(),
+                unassignedShards.stream().map(ShardRouting::shardId).collect(Collectors.toCollection(TreeSet::new))
+            );
         }
 
-        public long storagePreventsRemainOrMove() {
+        public ShardsSize storagePreventsRemainOrMove() {
             RoutingAllocation allocation = new RoutingAllocation(allocationDeciders, state, info, shardSizeInfo, System.nanoTime());
 
             List<ShardRouting> candidates = new LinkedList<>();
@@ -249,13 +271,18 @@ public class ReactiveStorageDeciderService implements AutoscalingDeciderService 
                 .mapToLong(e -> unmovableSize(e.getKey(), e.getValue()))
                 .sum();
 
-            long unallocatableBytes = candidates.stream()
+            List<ShardRouting> unallocatedShards = candidates.stream()
                 .filter(Predicate.not(unmovableShards::contains))
                 .filter(s1 -> cannotAllocateDueToStorage(s1, allocation))
-                .mapToLong(this::sizeOf)
-                .sum();
+                .toList();
+            long unallocatableBytes = unallocatedShards.stream().mapToLong(this::sizeOf).sum();
 
-            return unallocatableBytes + unmovableBytes;
+            return new ShardsSize(
+                unallocatableBytes + unmovableBytes,
+                Stream.concat(unmovableShards.stream(), unallocatedShards.stream())
+                    .map(ShardRouting::shardId)
+                    .collect(Collectors.toCollection(TreeSet::new))
+            );
         }
 
         /**
@@ -375,7 +402,7 @@ public class ReactiveStorageDeciderService implements AutoscalingDeciderService 
             return allocation.metadata().getIndexSafe(shard.index());
         }
 
-        private Optional<String> highestPreferenceTier(List<String> preferredTiers, DiscoveryNodes unused) {
+        private Optional<String> highestPreferenceTier(List<String> preferredTiers, DiscoveryNodes unused, DesiredNodes desiredNodes) {
             assert preferredTiers.isEmpty() == false;
             return Optional.of(preferredTiers.get(0));
         }
@@ -405,8 +432,7 @@ public class ReactiveStorageDeciderService implements AutoscalingDeciderService 
         }
 
         long unmovableSize(String nodeId, Collection<ShardRouting> shards) {
-            ClusterInfo clusterInfo = this.info;
-            DiskUsage diskUsage = clusterInfo.getNodeMostAvailableDiskUsages().get(nodeId);
+            DiskUsage diskUsage = this.info.getNodeMostAvailableDiskUsages().get(nodeId);
             if (diskUsage == null) {
                 // do not want to scale up then, since this should only happen when node has just joined (clearly edge case).
                 return 0;
@@ -429,7 +455,7 @@ public class ReactiveStorageDeciderService implements AutoscalingDeciderService 
         }
 
         Stream<RoutingNode> nodesInTier(RoutingNodes routingNodes) {
-            return nodeIds.stream().map(n -> routingNodes.node(n));
+            return nodeIds.stream().map(routingNodes::node);
         }
 
         private static class SingleForecast {
@@ -450,7 +476,7 @@ public class ReactiveStorageDeciderService implements AutoscalingDeciderService 
                 metadataBuilder.put(updatedDataStream);
             }
 
-            public void applySize(ImmutableOpenMap.Builder<String, Long> builder, RoutingTable updatedRoutingTable) {
+            public void applySize(Map<String, Long> builder, RoutingTable updatedRoutingTable) {
                 for (Map.Entry<IndexMetadata, Long> entry : additionalIndices.entrySet()) {
                     List<ShardRouting> shardRoutings = updatedRoutingTable.allShards(entry.getKey().getIndex().getName());
                     long size = entry.getValue() / shardRoutings.size();
@@ -475,19 +501,19 @@ public class ReactiveStorageDeciderService implements AutoscalingDeciderService 
                 .map(IndexAbstraction.DataStream.class::cast)
                 .map(ds -> forecast(state.metadata(), ds, forecastWindow, now))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
             if (singleForecasts.isEmpty()) {
                 return this;
             }
             Metadata.Builder metadataBuilder = Metadata.builder(state.metadata());
             RoutingTable.Builder routingTableBuilder = RoutingTable.builder(state.routingTable());
-            ImmutableOpenMap.Builder<String, Long> sizeBuilder = ImmutableOpenMap.builder();
+            Map<String, Long> sizeBuilder = new HashMap<>();
             singleForecasts.forEach(p -> p.applyMetadata(metadataBuilder));
             singleForecasts.forEach(p -> p.applyRouting(routingTableBuilder));
             RoutingTable routingTable = routingTableBuilder.build();
             singleForecasts.forEach(p -> p.applySize(sizeBuilder, routingTable));
             ClusterState forecastClusterState = ClusterState.builder(state).metadata(metadataBuilder).routingTable(routingTable).build();
-            ClusterInfo forecastInfo = new ExtendedClusterInfo(sizeBuilder.build(), AllocationState.this.info);
+            ClusterInfo forecastInfo = new ExtendedClusterInfo(Collections.unmodifiableMap(sizeBuilder), AllocationState.this.info);
 
             return new AllocationState(
                 forecastClusterState,
@@ -668,20 +694,45 @@ public class ReactiveStorageDeciderService implements AutoscalingDeciderService 
     }
 
     public static class ReactiveReason implements AutoscalingDeciderResult.Reason {
+
+        static final int MAX_AMOUNT_OF_SHARDS = 512;
+        private static final Version SHARD_IDS_OUTPUT_VERSION = Version.V_8_4_0;
+
         private final String reason;
         private final long unassigned;
         private final long assigned;
+        private final SortedSet<ShardId> unassignedShardIds;
+        private final SortedSet<ShardId> assignedShardIds;
 
         public ReactiveReason(String reason, long unassigned, long assigned) {
+            this(reason, unassigned, Collections.emptySortedSet(), assigned, Collections.emptySortedSet());
+        }
+
+        ReactiveReason(
+            String reason,
+            long unassigned,
+            SortedSet<ShardId> unassignedShardIds,
+            long assigned,
+            SortedSet<ShardId> assignedShardIds
+        ) {
             this.reason = reason;
             this.unassigned = unassigned;
             this.assigned = assigned;
+            this.unassignedShardIds = unassignedShardIds;
+            this.assignedShardIds = assignedShardIds;
         }
 
         public ReactiveReason(StreamInput in) throws IOException {
             this.reason = in.readString();
             this.unassigned = in.readLong();
             this.assigned = in.readLong();
+            if (in.getVersion().onOrAfter(SHARD_IDS_OUTPUT_VERSION)) {
+                unassignedShardIds = Collections.unmodifiableSortedSet(new TreeSet<>(in.readSet(ShardId::new)));
+                assignedShardIds = Collections.unmodifiableSortedSet(new TreeSet<>(in.readSet(ShardId::new)));
+            } else {
+                unassignedShardIds = Collections.emptySortedSet();
+                assignedShardIds = Collections.emptySortedSet();
+            }
         }
 
         @Override
@@ -697,6 +748,14 @@ public class ReactiveStorageDeciderService implements AutoscalingDeciderService 
             return assigned;
         }
 
+        public SortedSet<ShardId> unassignedShardIds() {
+            return unassignedShardIds;
+        }
+
+        public SortedSet<ShardId> assignedShardIds() {
+            return assignedShardIds;
+        }
+
         @Override
         public String getWriteableName() {
             return ReactiveStorageDeciderService.NAME;
@@ -707,6 +766,10 @@ public class ReactiveStorageDeciderService implements AutoscalingDeciderService 
             out.writeString(reason);
             out.writeLong(unassigned);
             out.writeLong(assigned);
+            if (out.getVersion().onOrAfter(SHARD_IDS_OUTPUT_VERSION)) {
+                out.writeCollection(unassignedShardIds);
+                out.writeCollection(assignedShardIds);
+            }
         }
 
         @Override
@@ -714,7 +777,11 @@ public class ReactiveStorageDeciderService implements AutoscalingDeciderService 
             builder.startObject();
             builder.field("reason", reason);
             builder.field("unassigned", unassigned);
+            builder.field("unassigned_shards", unassignedShardIds.stream().limit(MAX_AMOUNT_OF_SHARDS).toList());
+            builder.field("unassigned_shards_count", unassignedShardIds.size());
             builder.field("assigned", assigned);
+            builder.field("assigned_shards", assignedShardIds.stream().limit(MAX_AMOUNT_OF_SHARDS).toList());
+            builder.field("assigned_shards_count", assignedShardIds.size());
             builder.endObject();
             return builder;
         }
@@ -724,12 +791,16 @@ public class ReactiveStorageDeciderService implements AutoscalingDeciderService 
             if (this == o) return true;
             if (o == null || getClass() != o.getClass()) return false;
             ReactiveReason that = (ReactiveReason) o;
-            return unassigned == that.unassigned && assigned == that.assigned && reason.equals(that.reason);
+            return unassigned == that.unassigned
+                && assigned == that.assigned
+                && reason.equals(that.reason)
+                && unassignedShardIds.equals(that.unassignedShardIds)
+                && assignedShardIds.equals(that.assignedShardIds);
         }
 
         @Override
         public int hashCode() {
-            return Objects.hash(reason, unassigned, assigned);
+            return Objects.hash(reason, unassigned, assigned, unassignedShardIds, assignedShardIds);
         }
     }
 }
